--- a/train_configs/config.yaml
+++ b/train_configs/config.yaml
@@ -1,19 +1,19 @@
 default:
     trainer: ppo
-    batch_size: 1024
+    batch_size: 2048
     beta: 5.0e-3
-    buffer_size: 10240
+    buffer_size: 20480
     epsilon: 0.2
-    hidden_units: 128
+    hidden_units: 512
     lambd: 0.95
     learning_rate: 3.0e-4
-    learning_rate_schedule: linear
-    max_steps: 5.0e5
+    learning_rate_schedule: constant
+    max_steps: 5.0e7
     memory_size: 128
     normalize: false
     num_epoch: 3
     num_layers: 2
-    time_horizon: 64
+    time_horizon: 1000
     sequence_length: 64
     summary_freq: 10000
     use_recurrent: false
