--- a/train_configs/config_self_play.yaml
+++ b/train_configs/config_self_play.yaml
@@ -1,27 +1,26 @@
 default:
     trainer: ppo
     batch_size: 2048
-    beta: 5.0e-3
     buffer_size: 20480
-    epsilon: 0.2
-    hidden_units: 512
-    lambd: 0.95
-    learning_rate: 3.0e-4
+    lambd: 0.92
+    num_epoch: 2
+    time_horizon: 5000
+    beta: 1e-4
+    epsilon: 0.15
+    hidden_units: 500
+    learning_rate: 3e-4
     learning_rate_schedule: constant
     max_steps: 1.0e8
-    memory_size: 128
-    normalize: false
-    num_epoch: 3
-    num_layers: 2
-    time_horizon: 1000
+    normalize: true
+    num_layers: 3
     sequence_length: 64
     summary_freq: 10000
-    use_recurrent: false
-    vis_encode_type: simple
     reward_signals:
         extrinsic:
             strength: 1.0
-            gamma: 0.99
+            gamma: 0.999
+    use_recurrent: false
+    memory_size: 64
     self_play:
         window: 10
         play_against_current_self_ratio: 0.5
