--- a/train_configs/config_self_play.yaml
+++ b/train_configs/config_self_play.yaml
@@ -3,12 +3,12 @@ default:
     batch_size: 2048
     buffer_size: 20480
     lambd: 0.92
-    num_epoch: 2
-    time_horizon: 5000
+    num_epoch: 3
+    time_horizon: 512
     beta: 1e-4
     epsilon: 0.15
     hidden_units: 500
-    learning_rate: 3e-4
+    learning_rate: 1e-4
     learning_rate_schedule: constant
     max_steps: 1.0e8
     normalize: true
@@ -26,6 +26,7 @@ default:
         play_against_current_self_ratio: 0.5
         save_steps: 50000
         swap_steps: 50000
+        swap_steps: 100000
 # Soccer:
 #     normalize: false
 #     max_steps: 5.0e7
