--- a/train_configs/config_self_play.yaml
+++ b/train_configs/config_self_play.yaml
@@ -5,10 +5,10 @@ default:
     lambd: 0.92
     num_epoch: 3
     time_horizon: 512
-    beta: 1e-4
+    beta: 1.0e-4
     epsilon: 0.15
     hidden_units: 500
-    learning_rate: 1e-4
+    learning_rate: 1.0e-4
     learning_rate_schedule: constant
     max_steps: 1.0e8
     normalize: true
@@ -26,18 +26,4 @@ default:
         play_against_current_self_ratio: 0.5
         save_steps: 50000
         swap_steps: 50000
-        swap_steps: 100000
-# Soccer:
-#     normalize: false
-#     max_steps: 5.0e7
-#     learning_rate_schedule: constant
-#     batch_size: 2048
-#     buffer_size: 20480
-#     hidden_units: 512
-#     time_horizon: 1000
-#     num_layers: 2
-#     self_play:
-#         window: 10
-#         play_against_current_self_ratio: 0.5
-#         save_steps: 50000
-#         swap_steps: 50000
+        team_change: 100000
