--- a/train_configs/reward_shaping.yaml
+++ b/train_configs/reward_shaping.yaml
@@ -1,28 +1,28 @@
 default:
     trainer: ppo
-    batch_size: 4200
-    buffer_size: 84000
+    batch_size: 4500
+    buffer_size: 45000
     lambd: 0.92
-    num_epoch: 5
-    time_horizon: 1000
+    num_epoch: 3
+    time_horizon: 500
     beta: 1.0e-4
-    epsilon: 0.25
+    epsilon: 0.2
     hidden_units: 400
-    learning_rate: 2.0e-4
+    learning_rate: 1.0e-4
     learning_rate_schedule: constant
     max_steps: 1.0e9
-    normalize: true
+    normalize: false
     num_layers: 3
     sequence_length: 64
-    summary_freq: 5000
+    summary_freq: 10000
     reward_signals:
         extrinsic:
-            strength: 0.995
+            strength: 1
             gamma: 0.999
-        curiosity:
-            strength: 0.005
-            gamma: 0.99
-            encoding_size: 256
+        # curiosity:
+        #     strength: 0.005
+        #     gamma: 0.99
+        #     encoding_size: 256
     use_recurrent: false
     memory_size: 64
     self_play:
